--- a/conf/model/convnext-post-add.yaml
+++ b/conf/model/convnext-post-add.yaml
@@ -84,6 +84,7 @@ train_sys:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
       lr: 0.0005
+    prediction_time_limit: 50
   - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
   - _target_: src.modules.training.postprocessing.smooth_file.SmoothFile
     smooth_factor: 0.75
