--- a/conf/submit.yaml
+++ b/conf/submit.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_submit
   - hydra/logging
-  - model: convnext # Add models or ensembles
+  - model: sour-notch # Add models or ensembles
 
 # Use this when uploading to Kaggle
 
@@ -21,11 +21,11 @@ species_path: data/raw/2024/train_audio/
 result_path: submission
 
 # KAGGLE TESTING
-# data_path: /kaggle/input/birdclef-2024/unlabeled_soundscapes/
-# species_path: /kaggle/input/birdclef-2024/train_audio/
-# result_path: /kaggle/working/
+#data_path: /kaggle/input/birdclef-2024/unlabeled_soundscapes/
+#species_path: /kaggle/input/birdclef-2024/train_audio/
+#result_path: /kaggle/working/
 
 # KAGGLE SUBMIT
-# data_path: /kaggle/input/birdclef-2024/test_soundscapes/
-# species_path: /kaggle/input/birdclef-2024/train_audio/
-# result_path: /kaggle/working/
+#data_path: /kaggle/input/birdclef-2024/test_soundscapes/
+#species_path: /kaggle/input/birdclef-2024/train_audio/
+#result_path: /kaggle/working/
