--- a/conf/model/convnext-post-google.yaml
+++ b/conf/model/convnext-post-google.yaml
@@ -6,13 +6,13 @@ x_sys:
   steps:
   - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
     years:
-    - '2024'
+    - '2024gxeno'
 y_sys: null
 train_sys:
   _target_: src.modules.training.verbose_training_pipeline.VerboseTrainingPipeline
   steps:
   - _target_: src.modules.training.main_trainer.MainTrainer
-    year: '2024'
+    year: '2024gxeno'
     dataset_args:
       sampler:
         _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
