--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_train
   - hydra/logging
-  - model: swisssweep # Add models or ensembles
+  - model: convnext-post-google # Add models or ensembles
   - wandb: train
 
 ###############
@@ -21,7 +21,7 @@ metadata_path: data/raw/2024/train_metadata.csv
 test_size: 0.2
 
 # Species cap
-max_recordings_per_species: 500
+#max_recordings_per_species: 500
 
 scorer:
   _target_: src.scoring.rocauc_years.ROCAUC # Add scorer
