--- a/conf/submit.yaml
+++ b/conf/submit.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_submit
   - hydra/logging
-  - model: convnext-post-add  # Add models or ensembles
+  - ensemble: timed  # Add models or ensembles
 
 # Use this when uploading to Kaggle
 
