--- a/conf/ensemble/timed.yaml
+++ b/conf/ensemble/timed.yaml
@@ -6,7 +6,7 @@ weights:  # Unused for TimedVotingEnsemble, all models are weighted equally
   - 0.5
   - 0.5
 
-prediction_time: 10  # Seconds
+prediction_time: 6900  # Seconds = 115 Minutes
 
 _target_: src.modules.ensemble.timed_voting_ensemble.TimedVotingEnsemble
 _convert_: partial
