Fix garbage broken cv

--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_train
   - hydra/logging
-  - model: effb0-freefield # Add models or ensembles
+  - model: visformer-post # Add models or ensembles
   - wandb: train
 
 ###############
@@ -11,7 +11,7 @@ defaults:
 ###############
 processed_path: data/processed/
 raw_path: data/raw/
-years: ["freefield"]
+years: ["2024"]
 cache_path: data/cache
 
 data_path: data/raw/2024/train_audio/
@@ -42,5 +42,5 @@ splitter:
   n_splits: 5 # Set to 0 if you want train full.
   shuffle: true
   random_state: 42
-  years: ["freefield"]
+  years: ["2024"]
 allow_multiple_instances: true
