--- a/conf/model/visformer-freefield.yaml
+++ b/conf/model/visformer-freefield.yaml
@@ -56,15 +56,15 @@ train_sys:
       num_workers: 8
       prefetch_factor: 2
       persistent_workers: false
-    n_folds: 0
-    epochs: 40
+    n_folds: 5
+    epochs: 1
     patience: 15
     batch_size: 64
     model:
       _target_: src.modules.training.models.timm.Timm
       in_channels: 1
       out_channels: 1
-      model_name: efficientnet_b3
+      model_name: visformer_tiny
       activation: sigmoid
     scheduler:
       _target_: functools.partial
