--- a/conf/model/visformer-post.yaml
+++ b/conf/model/visformer-post.yaml
@@ -6,13 +6,13 @@ x_sys:
   steps:
   - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
     years:
-    - 'freefield'
+    - '2024'
 y_sys: null
 train_sys:
   _target_: src.modules.training.verbose_training_pipeline.VerboseTrainingPipeline
   steps:
   - _target_: src.modules.training.main_trainer.MainTrainer
-    year: 'freefield'
+    year: '2024'
     dataset_args:
       sampler:
         _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
@@ -57,25 +57,21 @@ train_sys:
       prefetch_factor: 2
       persistent_workers: false
     n_folds: 0
-    epochs: 40
+    epochs: 50
     patience: 15
     batch_size: 64
     model:
-      _target_: src.modules.training.models.two_stage_model.TwoStageModel
-      threshold: 0.4125
-      model1:
-        _target_: src.modules.training.models.pretrained_model.PretrainedModel
-        #model_path: "tm/1d3da39e7fabe8b5c620a1b4dcacd640_5_f0.pt"  # Call / nocall model (convnext) 909815b1e76632df33b38c3591a1bced_5_f0.pt
-        model_path: "tm/909815b1e76632df33b38c3591a1bced_5_f0.pt" # Call / nocall model (visformer tiny)
-      model2:
-        _target_: src.modules.training.models.pretrained_model.PretrainedModel
-        model_path: "tm/1ae19a94670376d14cd2c4f0e8467ebf_5_f0.pt"  # Bird species model
+      _target_: src.modules.training.models.timm.Timm
+      in_channels: 1
+      out_channels: 182
+      model_name: visformer_tiny
+      activation: sigmoid
     scheduler:
       _target_: functools.partial
       _args_:
       - _target_: hydra.utils.get_class
         path: timm.scheduler.cosine_lr.CosineLRScheduler
-      warmup_t: 0
+      warmup_t: 3
       warmup_lr_init: 1.0e-05
       t_initial: 50
       cycle_limit: 1
@@ -86,7 +82,7 @@ train_sys:
       _args_:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
-      lr: 1e-5
+      lr: 0.0005
   - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
   - _target_: src.modules.training.postprocessing.multiply_mean.MultiplyMean
 pred_sys:
