--- a/conf/model/sweep-visformer.yaml
+++ b/conf/model/sweep-visformer.yaml
@@ -6,13 +6,13 @@ x_sys:
   steps:
   - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
     years:
-    - 'freefield'
+    - '2024'
 y_sys: null
 train_sys:
   _target_: src.modules.training.verbose_training_pipeline.VerboseTrainingPipeline
   steps:
   - _target_: src.modules.training.main_trainer.MainTrainer
-    year: 'freefield'
+    year: '2024'
     dataset_args:
       sampler:
         _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
@@ -59,13 +59,13 @@ train_sys:
       prefetch_factor: 2
       persistent_workers: false
     n_folds: 5
-    epochs: 40
-    patience: 10
+    epochs: 50
+    patience: 15
     batch_size: 64
     model:
       _target_: src.modules.training.models.timm.Timm
       in_channels: 1
-      out_channels: 1
+      out_channels: 182
       model_name: visformer_tiny
       activation: sigmoid
     scheduler:
