--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_train
   - hydra/logging
-  - model: sweep-visformer  # Add models or ensembles
+  - model: visformer-best  # Add models or ensembles
   - wandb: train
 
 ###############
