--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_train
   - hydra/logging
-  - model: multiyear  # Add models or ensembles
+  - model: convnext-norm  # Add models or ensembles
   - wandb: train
 
 ###############
@@ -18,7 +18,7 @@ data_path: data/raw/2024/train_audio/
 metadata_path: data/raw/2024/train_metadata.csv
 
 # Do this if you want train full.
-test_size: 0
+test_size: 0.2
 
 # Species cap
 #max_recordings_per_species: 500
@@ -39,7 +39,7 @@ splitter:
     _args_:
       - _target_: hydra.utils.get_class
         path: sklearn.model_selection.StratifiedKFold
-  n_splits: 0 # Set to 0 if you want train full.
+  n_splits: 5 # Set to 0 if you want train full.
   shuffle: true
   random_state: 42
   years: ["2024"]
