--- a/conf/model/convnext-post-focal.yaml
+++ b/conf/model/convnext-post-focal.yaml
@@ -76,15 +76,16 @@ train_sys:
       t_initial: 50
       cycle_limit: 1
     criterion:
-      _target_: torch.nn.BCELoss
+      _target_: src.modules.training.losses.focal_loss.FocalLossBCE
+      alpha: 1
     optimizer:
       _target_: functools.partial
       _args_:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
       lr: 0.0005
-#  - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
-#  - _target_: src.modules.training.postprocessing.multiply_mean.MultiplyMean
+  - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
+  - _target_: src.modules.training.postprocessing.multiply_mean.MultiplyMean
 pred_sys:
   _target_: src.modules.transformation.verbose_transformation_pipeline.VerboseTransformationPipeline
   title: Postprocessing pipeline
