--- a/conf/submit.yaml
+++ b/conf/submit.yaml
@@ -1,31 +1,31 @@
 defaults:
   - base_submit
   - hydra/logging
-  - model: convnext-post #$ Add models or ensembles
+  - model: convnext-post-focal  #$ Add models or ensembles
 
 # Use this when uploading to Kaggle
 
 ###############
 #             #
 #    PATHS    #
-#             #
+#             #\
 ###############
 
 
-# Local paths
-processed_path: data/processed
-raw_path: data/raw
-cache_path: data/cache
-data_path: data/raw/2024/test_soundscapes/
-species_path: data/raw/2024/train_audio/
-result_path: submission
+## Local paths
+#processed_path: data/processed
+#raw_path: data/raw
+#cache_path: data/cache
+#data_path: data/raw/2024/test_soundscapes/
+#species_path: data/raw/2024/train_audio/
+#result_path: submission
 
 # KAGGLE TESTING
 #data_path: /kaggle/input/birdclef-2024/unlabeled_soundscapes/
 #species_path: /kaggle/input/birdclef-2024/train_audio/
 #result_path: /kaggle/working/
 
-# KAGGLE SUBMIT
-#data_path: /kaggle/input/birdclef-2024/test_soundscapes/
-#species_path: /kaggle/input/birdclef-2024/train_audio/
-#result_path: /kaggle/working/
+## KAGGLE SUBMIT
+data_path: /kaggle/input/birdclef-2024/test_soundscapes/
+species_path: /kaggle/input/birdclef-2024/train_audio/
+result_path: /kaggle/working/
