--- a/conf/model/eca-foundation.yaml
+++ b/conf/model/eca-foundation.yaml
@@ -5,13 +5,13 @@ x_sys:
   title: Preprocessing pipeline
   steps:
   - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
-    years: ["2024","2024add","2023","2022","2021","2020"]
+    years: ["2024","2024add","2023","2022","2021","2020","pam20","pam21","pam22","kenya"]
 y_sys: null
 train_sys:
   _target_: src.modules.training.verbose_training_pipeline.VerboseTrainingPipeline
   steps:
   - _target_: src.modules.training.main_trainer.MainTrainer
-    year: "union_2024_2024add_2023_2022_2021_2020"
+    year: "union_2024_2024add_2023_2022_2021_2020_pam20_pam21_pam22_kenya"
     dataset_args:
       sampler:
         _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
@@ -43,11 +43,7 @@ train_sys:
           p: 0.5
         xy_transforms:
         - _target_: src.modules.training.augmentations.time_series_augmentations.EnergyCutmix
-          p: 0.5181849503196303
-        - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.MixUp1D
-          p: 0.7663673680865126
-        - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.CutMix1D
-          p: 0.6679029319201417
+          p: 0.8181849503196303
       aug_2d:
         _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
         x_transforms:
@@ -63,16 +59,17 @@ train_sys:
       prefetch_factor: 2
       persistent_workers: false
     n_folds: 5
-    epochs: 50
+    epochs: 75
     patience: 15
     batch_size: 256
     model:
       _target_: src.modules.training.models.timm.Timm
       in_channels: 1
-      out_channels: 992
+      out_channels: 1109
       model_name: eca_nfnet_l0
       activation: sigmoid
-      drop_path_rate: 0.3
+      drop_path_rate: 0.2
+      drop_rate: 0.2
     scheduler:
       _target_: functools.partial
       _args_:
@@ -80,7 +77,7 @@ train_sys:
         path: timm.scheduler.cosine_lr.CosineLRScheduler
       warmup_t: 3
       warmup_lr_init: 1.0e-05
-      t_initial: 50
+      t_initial: 75
       cycle_limit: 1
     criterion:
       _target_: src.modules.training.losses.focal_loss.FocalLossBCE
