--- a/conf/model/eca-finetune-base.yaml
+++ b/conf/model/eca-finetune-base.yaml
@@ -84,13 +84,13 @@ train_sys:
       num_workers: 16
       prefetch_factor: 2
       persistent_workers: false
-    n_folds: 5
+    n_folds: 0
     epochs: 20
     patience: 15
-    batch_size: 256
+    batch_size: 64
     model:
       _target_: src.modules.training.models.pretrained_model.PretrainedModel
-      model_path: "tm/?65d98dcf365ead579266f698a1f5a135_5_f0.pt"
+      model_path: "tm/65d98dcf365ead579266f698a1f5a135_5_f0.pt"
       crop_head: 182
     scheduler:
       _target_: functools.partial
